# FranklinWritingExercise

./: .pylintrc  README.md  build_resources.py  pyproject.toml
franklin_writing_exercise/: __main__.py  exercise_model.py  main_window.py  main_window.ui  resources.py  text_edit.py  ui_main_window.py
res/: franklin-exercise.desktop  resources.qrc
