[tool.poetry]
name = "franklin_writing_exercise"
version = "1.0.0"
description = ""
authors = ["PowerSnail <hj@powersnail.com>"]
license = "GPLv3"
include = [
    "res/franklin-exercise.svg",
    "res/franklin-exercise.desktop"
]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
franklin-exercise = "franklin_writing_exercise.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
